A few things.. - Detects the current section on scroll and updates the URL - Updated the number of columns in the photo grid - Fixed the logo spinner and the header logo - Fixed the broken section titles on mobile - Reduced viewFactor on the section articles so they load sooner and leave less whitespace

--- a/themes/sathyaram/css/sathyaram.css
+++ b/themes/sathyaram/css/sathyaram.css
@@ -2126,10 +2126,11 @@ header {
   #web > h1,
   #graphic > h1 {
     font-family: "Fredoka One", sans-serif;
-    font-size: 84px;
+    font-size: 56px;
     margin: 0 0 50px 0;
-    padding: 0;
+    padding: 0 10px;
     color: #947e92;
+    text-align: center;
     width: 100%;
     margin-left: 0;
     margin-right: 0; }
@@ -2147,6 +2148,20 @@ header {
       #web > h1,
       #graphic > h1 {
         width: 1200px; } }
+    @media (min-width: 768px) {
+      #web > h1,
+      #graphic > h1 {
+        text-align: left;
+        padding: 0;
+        font-size: 64px; } }
+    @media (min-width: 992px) {
+      #web > h1,
+      #graphic > h1 {
+        font-size: 72px; } }
+    @media (min-width: 1280px) {
+      #web > h1,
+      #graphic > h1 {
+        font-size: 84px; } }
   #web .wrapper,
   #graphic .wrapper {
     display: -ms-flexbox;
@@ -2433,19 +2448,19 @@ header {
     float: left;
     margin: 0;
     padding: 0;
-    width: 33.33333%; }
+    width: 50%; }
     @media (min-width: 768px) {
       #photography .sizer,
       #photography .item {
-        width: 25%; } }
+        width: 33.33333%; } }
     @media (min-width: 992px) {
       #photography .sizer,
       #photography .item {
-        width: 20%; } }
+        width: 33.33333%; } }
     @media (min-width: 1280px) {
       #photography .sizer,
       #photography .item {
-        width: 16.66667%; } }
+        width: 25%; } }
   #photography .item {
     padding: 3px;
     cursor: pointer; }
