--- a/themes/sathyaram/src/scss/_website.scss
+++ b/themes/sathyaram/src/scss/_website.scss
@@ -7,11 +7,24 @@
 
   > h1 {
     font-family: $section-title-font;
-    font-size: 84px;
+    font-size: 56px;
     margin: 0 0 50px 0;
-    padding: 0;
+    padding: 0 10px;
     color: #947e92;
+    text-align: center;
     @include size-container;
+
+    @media (min-width: $breakpoint-sm-min) {
+      text-align: left;
+      padding: 0;
+      font-size: 64px;
+    }
+    @media (min-width: $breakpoint-md-min) {
+      font-size: 72px;
+    }
+    @media (min-width: $breakpoint-lg-min) {
+      font-size: 84px;
+    }
   }
 
   .wrapper {
